contrib/kubernetes/mattermost.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mattermost-app
  labels:
    app: mattermost
    tier: app
  namespace: default
spec:
  selector:
    matchLabels:
      app: mattermost
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      name: mattermost-app
      labels:
        app: mattermost
        tier: app
    spec:
      containers:
      - name: mattermost-app
        image: "mattermost/mattermost-prod-app:5.14.1"
        volumeMounts:
        # optional persistent storage
        #- name: appdata
          #mountPath: /mattermost/data
        - name: etclocaltime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      # optional persistent storage
      #- name: appdata
        #persistentVolumeClaim:
        #  claimName: mattermost-app
      - name: etclocaltime
        hostPath:
          path: /etc/localtime
