contrib/kubernetes/mattermost.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-svc
  namespace: default
spec:
  type: NodePort #NodePort
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mattermost
    tier: app
